Fix dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  margin: 0;
+  height: 100vh;
+  color: rgb(var(--foreground-rgb));
+  background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -16,16 +29,6 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
@@ -33,13 +36,13 @@ body {
 }
 
 .btn-primary {
-  @apply bg-teal-700 text-white py-1 px-2 rounded-full transition-all border border-teal-300 hover:border-teal-300/50 hover:bg-teal-500/50 flex justify-center gap-4 items-center;
+  @apply bg-teal-500 text-white py-1 px-2 rounded-full transition-all border border-teal-700 hover:border-teal-800 hover:bg-teal-600 flex justify-center gap-4 items-center;
 }
 
 /* Custom midi-player styles */
 
 a {
-  @apply text-teal-300;
+  @apply text-teal-600 dark:text-teal-300 hover:text-teal-800 dark:hover:text-teal-400 hover:underline decoration-dotted;
 }
 
 #player {
